# bourse-alerts

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_AI_ANALYST.md  AUDIT_2026-07-18.md  AUDIT_TECHNIQUE.md  Dockerfile  HANDOVER.md  MIGRATIONS.md  PHASE_1B_SOURCE_VALIDATION.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  stock_alert.py
config/: portfolio.example.json  watchlist.json
dashboard/: app.py
flutter_app/: README.md  analysis_options.yaml  pubspec.yaml
migrations/: env.py
moroccan_stock_intelligence/: __init__.py  api.py  api_models.py  cli.py  config.py  db.py  logging_config.py  models.py  repository.py  scheduler.py  schemas.py  utils.py
reports/: ablation-2026-07.json  backtest-2026-07.json
scripts/: export-corporate-ca.ps1  flutter-docker.sh  verify-bundle.sh
tests/: conftest.py  test_analysts_with_data.py  test_api.py  test_auth.py  test_backtest.py  test_backup.py  test_collectors.py  test_db_migrate.py  test_favorites.py  test_fundamentals_scoring.py  test_history_backfill.py  test_horizon_strategy.py  test_indicator_depth.py  test_investment_analysis.py  test_market_state.py  test_market_state_cache.py  test_migrations.py  test_news_backfill.py  test_news_classifier.py  test_news_context.py  test_packaging.py  test_parsing.py  test_portfolio.py  test_portfolio_fees.py  test_prediction_semantics.py  test_push_delivery.py  test_ratelimit.py  test_recommendation_policy.py  test_refresh.py  test_research_engine.py  test_restore.py  (+5 more)
(+96 files in other folders)
