[project]
name = "moroccan-stock-intelligence"
version = "0.1.0"
description = "Casablanca Stock Exchange market intelligence, alerts, and dashboard."
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
